Bug 414195 - Deselecting all fields on BibTeX Viewer hides the field sorting header
Summary: Deselecting all fields on BibTeX Viewer hides the field sorting header
Status: RESOLVED FIXED
Alias: None
Product: KBibTeX
Classification: Applications
Component: User interface (other bugs)
Version First Reported In: 0.9
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Fischer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-16 06:12 UTC by yuu
Modified: 2020-01-03 19:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.2
Sentry Crash Report:


Attachments
Screenshot showing kbibtex without the sorting field (76.83 KB, image/jpeg)
2019-11-16 06:12 UTC, yuu
Details
git diff between 'bibtex.kbstyle' and 'bibtex.kbstyle.old' (3.66 KB, text/plain)
2019-11-17 03:23 UTC, yuu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description yuu 2019-11-16 06:12:12 UTC
Created attachment 123949 [details]
Screenshot showing kbibtex without the sorting field

SUMMARY
Deselecting all fields on BibTeX Viewer hid the field sorting header (below filter toolbar) without any [intuitive?/obvious?] option do show it again.

STEPS TO REPRODUCE
1. Open .bib with 'BibTeX Viewer and Editor';
2. Right-click on the field sorting header and deselect all fields.

OBSERVED RESULT
Field sorting disappears. I didn't find any way to show it again (including the handbook).

EXPECTED RESULT
Don't disappear. Or have an option to show/hide it.

SOFTWARE/OS VERSIONS
KBibTeX: 0.9
Linux: 5.3.8-3-MANJARO
(available in About System)
Qt Version: 5.13.1
DE: LxQt

ADDITIONAL INFORMATION
TIHI
Comment 1 yuu 2019-11-17 03:23:30 UTC
Created attachment 123963 [details]
git diff between 'bibtex.kbstyle' and 'bibtex.kbstyle.old'

Removing '$HOME/.local/share/kbibtex/bibtex.kbstyle' made the columns to comeback.
Comment 2 Thomas Fischer 2019-11-18 11:37:23 UTC
I can confirm and reproduce this problem.
Comment 3 Thomas Fischer 2019-11-19 20:23:03 UTC
I created a branch in my private repository with a commit that should fix your problem: In repository
  clones/kbibtex/thomasfischer/kbibtex.git
in branch
  bugs/kde414195
please try the latest commit.

You can test this code easily by following those steps:
0. Uninstall the distribution-provided KBibTeX installation
1. Get this script:  https://cgit.kde.org/scratch/thomasfischer/kbibtex-related.git/plain/run/run-kbibtex.sh
2. Run as:   bash run-kbibtex.sh https://anongit.kde.org/clones/kbibtex/thomasfischer/kbibtex.git bugs/kde123456
No sudo or su required, everything will be placed in user-owned temporary directories.
You may need to install development packages, but please look on any error messages during the cmake or make invocation for details.
Comment 4 Bug Janitor Service 2019-12-04 04:33:08 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Thomas Fischer 2019-12-12 20:57:14 UTC
(In reply to Thomas Fischer from comment #3)
> 2. Run as:   bash run-kbibtex.sh
> https://anongit.kde.org/clones/kbibtex/thomasfischer/kbibtex.git
> bugs/kde123456
Sorry, there was a typo in above URL ("123456", should have been the bug number).
So, please try to run this here:

bash run-kbibtex.sh https://anongit.kde.org/clones/kbibtex/thomasfischer/kbibtex.git bugs/kde414195
Comment 6 Thomas Fischer 2019-12-17 20:56:20 UTC
Git commit 9a6182af10b54e4f1150c7d7c16fe745f5fb9b04 by Thomas Fischer.
Committed on 11/12/2019 at 22:23.
Pushed by thomasfischer into branch 'kbibtex/0.9'.

Prevent hiding all columns in file list view

Prevent the user from hiding all columns like 'title', 'identifier', or
'year' until no column is left. In such a case, the list view's header
would completely disappear, making it impossible to show columns again.

This commit addresses this issue two-fold: first, if only one column is
left, the action to hide this column is disabled (GUI-centric solution).
Second, the code that does the actual hiding/show will also abort hiding
operations if requested to hide the last visible column (logic-centric
solution).
FIXED-IN: 0.9.2

M  +1    -0    ChangeLog
M  +13   -0    src/gui/file/basicfileview.cpp

https://commits.kde.org/kbibtex/9a6182af10b54e4f1150c7d7c16fe745f5fb9b04
Comment 7 Thomas Fischer 2019-12-24 20:12:52 UTC
Git commit f72bd0febd592e9cb89e2ed8312b3e5eeaf0b2f5 by Thomas Fischer.
Committed on 24/12/2019 at 20:08.
Pushed by thomasfischer into branch 'kbibtex/0.10'.

Prevent hiding all columns in file list view

Prevent the user from hiding all columns like 'title', 'identifier', or
'year' until no column is left. In such a case, the list view's header
would completely disappear, making it impossible to show columns again.

This commit addresses this issue two-fold: first, if only one column is
left, the action to hide this column is disabled (GUI-centric solution).
Second, the code that does the actual hiding/show will also abort hiding
operations if requested to hide the last visible column (logic-centric
solution).

This commit is a forward-port of commit 5d1d90147047c659806ae0fa5 from
branch 'kbibtex/0.9'.

M  +1    -0    ChangeLog
M  +13   -0    src/gui/file/basicfileview.cpp

https://commits.kde.org/kbibtex/f72bd0febd592e9cb89e2ed8312b3e5eeaf0b2f5
Comment 8 Thomas Fischer 2020-01-03 19:32:37 UTC
Git commit c96bd535eb37becaa6730933ed2646f1a2c8ae89 by Thomas Fischer.
Committed on 26/12/2019 at 19:39.
Pushed by thomasfischer into branch 'master'.

Prevent hiding all columns in file list view

Prevent the user from hiding all columns like 'title', 'identifier', or
'year' until no column is left. In such a case, the list view's header
would completely disappear, making it impossible to show columns again.

This commit addresses this issue two-fold: first, if only one column is
left, the action to hide this column is disabled (GUI-centric solution).
Second, the code that does the actual hiding/show will also abort hiding
operations if requested to hide the last visible column (logic-centric
solution).

This commit is a forward-port of commit 5d1d90147047c659806ae0fa5 from
branch 'kbibtex/0.9'.

M  +1    -0    ChangeLog
M  +13   -0    src/gui/file/basicfileview.cpp

https://commits.kde.org/kbibtex/c96bd535eb37becaa6730933ed2646f1a2c8ae89