Prevent hiding all columns in file list view

Prevent the user from hiding all columns like 'title', 'identifier', or
'year' until no column is left. In such a case, the list view's header
would completely disappear, making it impossible to show columns again.

This commit addresses this issue two-fold: first, if only one column is
left, the action to hide this column is disabled (GUI-centric solution).
Second, the code that does the actual hiding/show will also abort hiding
operations if requested to hide the last visible column (logic-centric
solution).

BUG: 414195
FIXED-IN: 0.9.2